[gd_scene load_steps=8 format=3 uid="uid://4ykwdgmbuqxg"]

[ext_resource type="Script" path="res://Scripts/particleEnemy.gd" id="1_avjly"]
[ext_resource type="Texture2D" uid="uid://pjmvuxj7cjlu" path="res://Art/PlaceholderArt/GlowLight.png" id="11_mnrje"]
[ext_resource type="PackedScene" uid="uid://dnfv8l2scy5xo" path="res://Scenes/blockable_area.tscn" id="12_rabfj"]
[ext_resource type="AudioStream" uid="uid://c4jt50lgmrwjy" path="res://audio/buzzing.wav" id="13_toy7f"]
[ext_resource type="PackedScene" uid="uid://blpo7v224xhk1" path="res://Scenes/particle.tscn" id="14_55vaa"]

[sub_resource type="CircleShape2D" id="CircleShape2D_714ps"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_s4tsd"]
radius = 7.0

[node name="ParticleEnemy" type="CharacterBody2D"]
z_index = 2
collision_layer = 12
motion_mode = 1
platform_on_leave = 2
script = ExtResource("1_avjly")

[node name="ParticleEnabler" type="VisibleOnScreenNotifier2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_714ps")

[node name="HuntLight" type="PointLight2D" parent="."]
color = Color(0.94902, 0, 0.270588, 1)
energy = 0.0
shadow_enabled = true
texture = ExtResource("11_mnrje")
texture_scale = 0.2

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 5.0
target_desired_distance = 2.0

[node name="DetectionArea" parent="." instance=ExtResource("12_rabfj")]
max_gap = 8.0
ray_range = 100.0
ray_mask = 18

[node name="KillArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillArea"]
shape = SubResource("CircleShape2D_s4tsd")

[node name="buzzing" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_toy7f")
volume_db = -13.0
pitch_scale = 0.58
attenuation = 5.85634
bus = &"Creatures"

[node name="Particles" type="Node2D" parent="."]

[node name="Particle" parent="Particles" instance=ExtResource("14_55vaa")]

[node name="Particle2" parent="Particles" instance=ExtResource("14_55vaa")]

[node name="Particle3" parent="Particles" instance=ExtResource("14_55vaa")]

[node name="Particle4" parent="Particles" instance=ExtResource("14_55vaa")]

[node name="Particle5" parent="Particles" instance=ExtResource("14_55vaa")]

[node name="Particle6" parent="Particles" instance=ExtResource("14_55vaa")]

[node name="Particle7" parent="Particles" instance=ExtResource("14_55vaa")]

[connection signal="screen_entered" from="ParticleEnabler" to="." method="_on_particle_enabler_screen_entered"]
[connection signal="screen_exited" from="ParticleEnabler" to="." method="_on_particle_enabler_screen_exited"]
[connection signal="target_entered" from="DetectionArea" to="." method="_on_detection_area_target_entered"]
[connection signal="target_exited" from="DetectionArea" to="." method="_on_detection_area_target_exited"]
[connection signal="body_entered" from="KillArea" to="." method="_on_kill_area_body_entered"]
